Don't collapse whitespace in contenteditable=plaintext-only.

Rewrite white-space property for contenteditable=plaintext-only elements as:
    normal   -> pre-wrap
    nowrap   -> pre
    pre-line -> pre-wrap
because whitespace collapsing doesn't make sense in plain-text editing.
The new behavior matches to Microsoft Edge for TEXTAREA.

BUG=595491

Review URL: https://codereview.chromium.org/1813663002

Cr-Commit-Position: refs/heads/master@{#381668}

Former-commit-id: 73a59b847f8b048bf26d7806bafa403c8f3f95d6